# betterfountain-rust

./: .gitignore  Cargo.toml  test_regex.rs
examples/: test_independent_frames.rs  test_overlapping_frames.rs
src/: api.rs  lib.rs  main.rs  statistics.rs
src/docx/: docx.rs  docx_adapter.rs  docx_maker.rs  line_processor.rs  metadata_extractor.rs  mod.rs
src/docx/adapter/: docx.rs  mod.rs
src/models/: conf.rs  location.rs  mod.rs  screenplay_properties.rs  script_token.rs  struct_token.rs
src/parser/: fountain_parser.rs  mod.rs  text_processor.rs
src/pdf/: liner.rs  mod.rs
src/utils/: fountain_constants.rs  mod.rs
tests/: docx_export_test.rs  fountain_parser_test.rs  statistics_debug_test.rs
tests/test_data/: .~黑色爱情诗.docx  黑色爱情诗.docx  黑色爱情诗.fountain  黑色爱情诗2.fountain
