[package]
name = "betterfountain-rust"
version = "0.1.0"
edition = "2021"
authors = ["Arming"]
description = "A Rust implementation of the Fountain screenplay parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "betterfountain_rust"
path = "src/lib.rs"

[[bin]]
name = "fountain-parser"
path = "src/main.rs"

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10.1"
thiserror = "1.0"
chrono = "0.4"
docx-rs = { git = "https://github.com/bokuweb/docx-rs.git", branch = "0.4.18-rc44" }
base64 = "0.13.1"
zip = "0.5.13"
tokio = { version = "1", features = ["full"] }
